# cc_transitions

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  transitions_cfg.yaml
e2e/: BUILD.bazel  MODULE.bazel  transitions_cfg.yaml
extensions/: cc_transitions.bzl
repo_rules/: transition_rules.bzl
templates/: cc_transitions.bzl.tpl  rule_builder.bzl  rule_transition.bzl.tpl
test/: BUILD.bazel
