module(
    name = "test_cc_transitions",
)

bazel_dep(name = "cc_transitions")
local_path_override(
    module_name = "cc_transitions",
    path = "..",
)
cc_transitions = use_extension("@cc_transitions//extensions:cc_transitions.bzl", "cc_transitions", dev_dependency=True)

cc_transitions.install(
    name = "rules_cc_transitions",
    configuration = "//:transitions_cfg.yaml",
)
use_repo(cc_transitions, "rules_cc_transitions")
